Responsive and bugs fixed
The layout overlapped in a couple of sections.

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ header {
 .hero {
     margin: 0;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     position: relative;
     padding: 0 5%;
     display: flex;
@@ -110,7 +110,9 @@ header {
 }
 .fullscreen {
     position: absolute;
-    right: 0;
+    opacity: 40%;
+    height: 95%;
+    width: 100%;
     top: 0;
     z-index: -1;
     object-fit: cover;
@@ -123,11 +125,9 @@ header {
 }
 .description {
     border-radius: 5px;
-    padding: 30px 0px;
+    padding: 10px;
     margin: 6% auto;
     background-color: rgba(34, 34, 34, 0.59);
-    width: 90%;
-    height: 50%;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -136,7 +136,7 @@ header {
 
 .description img {
     width: 31%;
-    height: 78%;
+    height: 64%;
     border-radius: 50%;
 }
 .description_text {
@@ -259,8 +259,7 @@ header {
 /* Contact */
 .contact {
     width: 90%;
-    height: 40vh;
-    margin: 20px auto;
+    margin: 50px auto;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -285,12 +284,6 @@ header {
     justify-content: space-evenly;
 }
 
-/* footer */
-footer {
-    width: 100%;
-    height: 10vh;
-}
-
 /* Tablet */
 @media (max-width: 820px) {
     /* Header */
@@ -308,8 +301,9 @@ footer {
     text-align: center;
     width: 100%;
    } 
-    .description {
-        height: 35%;
+   /* Banner */
+   .hero {
+    height: 110vh;
     }
     .description_text p {
         text-align: center;
@@ -331,6 +325,13 @@ footer {
 
     /* Mobie */
     @media (max-width: 480px) {
+        /* Banner */
+        .hero {
+            height: 100vh;
+        }
+        .fullscreen {
+            height: 100%;
+        }
         .showcase {
             margin: 20px auto;
         }
@@ -344,7 +345,7 @@ footer {
         }
         .description img {
             border-radius: 5px;
-            width: 70%;
+            width: 50%;
     
         }
         /* Projects */
@@ -371,37 +372,5 @@ footer {
         }
         
     }
-
-    /*  Other Banner breakpoints */
-     @media (max-width: 820px) {
-        .hero {
-             height: 75vh;
-            }
-        .fullscreen {
-            top: 0;
-        }
-    }
-    @media (max-width: 770px) {
-        .hero {
-            height: 80vh;
-           }
-        .title_pr {
-            padding-top: 20px;
-        }
-    }
-    @media (max-width: 480px ) {
-        .hero {
-            height: 90vh;
-           }
-    }
-    @media (max-width: 390px) {
-        .hero {
-            height: 110vh;
-           }
-    }
-    @media (max-width: 375px) {
-        .hero {
-            height: 125vh;
-           }
-    }
     
+  
